Cambios en los textos

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -7,26 +7,29 @@
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Miguel Ángel pero mis amigos me llaman midu. Empecé en la
-      programación con un Amstrad, tenía 10 años. Actualmente estoy <strong
-        >liderando equipos de desarrollo en multinacionales</strong
+      Me llamo Joseph Avila y soy un apasionado del desarrollo de software. 
+        Comencé mi viaje en la programación durante mi formación técnica en el SENA, 
+        donde descubrí mi vocación por crear soluciones tecnológicas innovadoras. 
+        Actualmente me especializo en <strong
+        >el desarrollo de aplicaciones web utilizando frameworks modernos 
+        como Angular, Vue.js y tecnologías frontend avanzadas</strong
       >.
-    </p>
+    </p>  
 
     <p>
-      Algunos de mis éxitos incluyen <strong
-        >colaborar con Mozilla para el desarrollo de las primeras apps en su
-        sistema FirefoxOS</strong
-      >. Aunque hoy está desaparecido fue un gran avance en el mundo del
+      Algunos de mis logros incluyen <strong
+        >el desarrollo de una plataforma Marketplace para el emprendimiento regional y 
+        la implementación de sistemas educativos basados ​​en Moodle</strong
+      >.    Aunque hoy está desaparecido fue un gran avance en el mundo del
       desarrollo web.
     </p>
 
     <p>
-      Como creador de contenido, <strong
-        >cuento con el canal de habla hispana más visto del mundo en la
-        categoría de <em class="italic">Software & Game Development</em> en Twitch</strong
-      >. Mi objetivo es mejorar la empleabilidad de la comunidad hispana y el
-      acceso a contenido de calidad.
+      Como desarrollador, <strong
+        >me destaco por mi capacidad para adaptarme a nuevas tecnologías y mi compromiso con la excelencia técnica</strong>. 
+        Mi objetivo es contribuir al éxito de proyectos empresariales 
+        mientras continúo expandiendo mis conocimientos en frameworks y tecnologías 
+        emergentes en el desarrollo de software.
     </p>
   </div>
 
