--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,20 +1,22 @@
 ---
 import ExperienceItem from "./ExperienceItem.astro"
+import Link from "./icons/Link.astro"
 const EXPERIENCE = [
   {
-    date: "Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
+    date: "Jul 2024 - Dic 2024",
+    title: "Apoyo Técnico",
+    company: "Sena Emprendimiento Regional",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
+      "Desarrollo de una plataforma Marketplace con soluciones robustas en PHP, JavaScript y SQL. Implementación de funcionalidades clave con tecnologías web modernas, garantizando la seguridad de la información y la gestión de la documentación técnica.",
+    link: "https://www.sena.edu.co/es-co/trabajo/Paginas/fondo-emprender.aspx",
   },
   {
     date: "Septiembre 2022",
-    title: "Principal Frontend Engineer",
-    company: "Adevinta Spain",
+    title: "Desarrollador Backend",
+    company: "TPD Industrial",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "Ejecución de la migración de servicios web en Java, aplicando mejores prácticas de desarrollo y asegurando la continuidad operativa durante la transición. Optimización del rendimiento de las aplicaciones y desarrollo de soluciones escalables que mejoraron la eficiencia de los procesos empresariales. Colaboración en la documentación técnica y en la implementación de estándares de calidad en el desarrollo de software.",
+    link: "https://tpdindustrial.co/",
   },
 ]
 ---
