--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -25,15 +25,14 @@ import SocialPill from "@/components/SocialPill.astro"
   <h1
     class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
   >
-    Hey, soy midudev
+    Hey, soy Joseph Avila
   </h1>
   <p
     class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
-    +15 años de experiencia. <strong
-      >Ingeniero de Software y Creador de Contenido sobre Programación</strong
-    > de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web
-    únicas.
+    +3 años de experiencia. <strong
+      >Desarrollador de Software</strong
+    > de Barranquilla, Colombia 🇨🇴. Especializado en desarrollo de aplicaciones web modernas.
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
     <SocialPill href="mailto:miduga@gmail.com">
@@ -43,6 +42,10 @@ import SocialPill from "@/components/SocialPill.astro"
     <SocialPill href="https://linkedin.com/in/midudev">
       <LinkedInIcon class="size-4" />
       LinkedIn
+    </SocialPill>
+    <SocialPill href="/cv.pdf" download>
+      <DownloadIcon class="size-4" />
+      Descargar CV
     </SocialPill>
   </nav>
 </div>
