Cambios en los iconos

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -11,7 +11,7 @@ const EXPERIENCE = [
     link: "https://www.sena.edu.co/es-co/trabajo/Paginas/fondo-emprender.aspx",
   },
   {
-    date: "Septiembre 2022",
+    date: "Ago 2023 - Abr 2024",
     title: "Desarrollador Backend",
     company: "TPD Industrial",
     description:
