--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,6 +4,7 @@ import Badge from "@/components/Badge.astro"
 import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
 import SocialPill from "@/components/SocialPill.astro"
+import DownloadIcon from "@/components/icons/DownloadIcon.astro"
 ---
 
 <div class="max-w-xl">
@@ -44,7 +45,7 @@ import SocialPill from "@/components/SocialPill.astro"
       LinkedIn
     </SocialPill>
     <SocialPill href="/cv.pdf" download>
-      <DownloadIcon class="size-4" />
+      <DownloadIcon size="20" color="#000" />
       Descargar CV
     </SocialPill>
   </nav>
