Correción de Textos 2

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -28,9 +28,9 @@ const PROJECTS = [
     tags: [TAGS.NEXT, TAGS.TAILWIND],
   },
   {
-    title: "AdventJS - Retos de programación con JavaScript y TypeScript",
+    title: "Plataforma Elearning - Cormagdalena",
     description:
-      "Plataforma Educativa CORMAGDALENA - Sistema LMS personalizado basado en Moodle para gestión de aprendizaje corporativo. Desarrollo e integración de plugins personalizados para evaluación y seguimiento académico. Implementado con PHP, MySQL y JavaScript, incluye una interfaz responsive y optimización de rendimiento para +500 usuarios activos.",
+      "Plataforma Educativa CORMAGDALENA - Sistema LMS personalizado que integra complementos propios para +500 usuarios. Desarrollado con PHP, MySQL y JavaScript, implementando módulos de evaluación, seguimiento académico y una interfaz responsive optimizada.",
     link: "https://adventjs.dev",
     image: "/projects/adventjs.webp",
     tags: [TAGS.NEXT, TAGS.TAILWIND],
