Correción de Textos en Proyectos

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -35,6 +35,14 @@ const PROJECTS = [
     image: "/projects/adventjs.webp",
     tags: [TAGS.NEXT, TAGS.TAILWIND],
   },
+  {
+    title: "Plataforma50 - Landing Page Empresarial",
+    description:
+      "Plataforma50 - Desarrollo y optimización de landing page corporativa. Implementación de mejoras en rendimiento, SEO y experiencia de usuario. Desarrollado con PHP y Bootstrap, logrando una notable mejora en velocidad de carga y posicionamiento en buscadores.",
+    link: "https://adventjs.dev",
+    image: "/projects/adventjs.webp",
+    tags: [TAGS.NEXT, TAGS.TAILWIND],
+  },
 ]
 ---
 
