--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -36,15 +36,15 @@ import DownloadIcon from "@/components/icons/DownloadIcon.astro"
     > de Barranquilla, Colombia 🇨🇴. Especializado en desarrollo de aplicaciones web modernas.
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="mailto:miduga@gmail.com">
+    <SocialPill href="mailto:avilajoseph2021@gmail.com">
       <MailIcon class="size-4" />
       Contáctame
     </SocialPill>
-    <SocialPill href="https://linkedin.com/in/midudev">
+    <SocialPill href="https://www.linkedin.com/in/joseph-avila-88ba86279/">
       <LinkedInIcon class="size-4" />
       LinkedIn
     </SocialPill>
-    <SocialPill href="/cv.pdf" download>
+    <SocialPill href="../Documents/Joseph_Avila_-_CV.pdf" download>
       <DownloadIcon size="20" color="#000" />
       Descargar CV
     </SocialPill>
