--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -7,29 +7,23 @@
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Joseph Avila y soy un apasionado del desarrollo de software. 
-        Comencé mi viaje en la programación durante mi formación técnica en el SENA, 
-        donde descubrí mi vocación por crear soluciones tecnológicas innovadoras. 
-        Actualmente me especializo en <strong
-        >el desarrollo de aplicaciones web utilizando frameworks modernos 
-        como Angular, Vue.js y tecnologías frontend avanzadas</strong
-      >.
-    </p>  
-
-    <p>
-      Algunos de mis logros incluyen <strong
-        >el desarrollo de una plataforma Marketplace para el emprendimiento regional y 
-        la implementación de sistemas educativos basados ​​en Moodle</strong
-      >.    Aunque hoy está desaparecido fue un gran avance en el mundo del
-      desarrollo web.
+      Desarrollador de software con formación técnica en el SENA y +3 años de experiencia 
+      especializado en <strong>el desarrollo de aplicaciones web utilizando frameworks modernos 
+      como Angular, Vue.js y tecnologías frontend avanzadas</strong>.
     </p>
 
     <p>
-      Como desarrollador, <strong
-        >me destaco por mi capacidad para adaptarme a nuevas tecnologías y mi compromiso con la excelencia técnica</strong>. 
-        Mi objetivo es contribuir al éxito de proyectos empresariales 
-        mientras continúo expandiendo mis conocimientos en frameworks y tecnologías 
-        emergentes en el desarrollo de software.
+      Entre mis proyectos más relevantes destaca <strong>el desarrollo de una plataforma 
+      Marketplace que conectó a más de 5000 emprendedores nacionales y la implementación 
+      de sistemas LMS personalizados basados en Moodle que han impactado a más de 500 
+      estudiantes</strong>.
+    </p>
+
+    <p>
+      Mi enfoque combina <strong>sólidas habilidades técnicas con una capacidad demostrada 
+      para adoptar nuevas tecnologías</strong>. Me centro en desarrollar soluciones 
+      empresariales escalables mientras mantengo actualizado mi stack tecnológico con las 
+      últimas tendencias en desarrollo web.
     </p>
   </div>
 
