--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,7 +4,7 @@ import Badge from "@/components/Badge.astro"
 import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
 import SocialPill from "@/components/SocialPill.astro"
-import DownloadIcon from "@/components/icons/DownloadIcon.astro"
+import CVIcon from "./icons/CVIcon.astro"
 ---
 
 <div class="max-w-xl">
@@ -44,8 +44,8 @@ import DownloadIcon from "@/components/icons/DownloadIcon.astro"
       <LinkedInIcon class="size-4" />
       LinkedIn
     </SocialPill>
-    <SocialPill href="../Documents/Joseph_Avila_-_CV.pdf" download>
-      <DownloadIcon size="20" color="#000" />
+    <SocialPill href="https://www.linkedin.com/in/joseph-avila-88ba86279/">
+      <CVIcon class="size-4" />
       Descargar CV
     </SocialPill>
   </nav>
