--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -44,7 +44,7 @@ const PROJECTS = [
       "Plataforma Educativa CORMAGDALENA - Sistema LMS personalizado que integra complementos propios para +500 usuarios. Desarrollado con PHP, MySQL y JavaScript, implementando módulos de evaluación, seguimiento académico y una interfaz responsive optimizada.",
     link: "https://adventjs.dev",
     image: "/projects/Cormagdalena.webp",
-    tags: [TAGS.PHP, TAGS.TAILWIND],
+    tags: [TAGS.PHP,TAGS.JAVASCRIPT,TAGS.TAILWIND],
   },
   {
     title: "Plataforma50 - Landing Page Empresarial",
