--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,6 @@
 ---
 const currentYear = new Date().getFullYear()
 ---
-
 <footer
   class="opacity-80 m-4 min-[375px]:pl-4 md:pl-0 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex justify-center"
 >
@@ -20,7 +19,10 @@ const currentYear = new Date().getFullYear()
         <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
       <li>
-        <a id="contacto" href="mailto:miduga@gmail.com" class="hover:underline"
+        <a href="https://github.com/AvilaJoseph" class="hover:underline me-4 md:me-6">GitHub</a>
+      </li>
+      <li>
+        <a id="contacto" href="mailto:avilajoseph2021@gmail.com" class="hover:underline"
           >Contacto</a
         >
       </li>
