--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import CVIcon from "./icons/CVIcon.astro"
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="/midudev.webp"
+      src="/FotoPerfil.webp"
       alt={personalImageAlt}
     />
     <a
@@ -44,7 +44,7 @@ import CVIcon from "./icons/CVIcon.astro"
       <LinkedInIcon class="size-4" />
       LinkedIn
     </SocialPill>
-    <SocialPill href="https://www.linkedin.com/in/joseph-avila-88ba86279/">
+    <SocialPill href="https://drive.google.com/file/d/1Y15lRrp_xRPFqSQNIhvArXws8guYJfUS/view?usp=sharing">
       <CVIcon class="size-4" />
       Descargar CV
     </SocialPill>
