--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -42,7 +42,7 @@ const PROJECTS = [
     title: "Plataforma Elearning - Cormagdalena",
     description:
       "Plataforma Educativa CORMAGDALENA - Sistema LMS personalizado que integra complementos propios para +500 usuarios. Desarrollado con PHP, MySQL y JavaScript, implementando módulos de evaluación, seguimiento académico y una interfaz responsive optimizada.",
-    link: "https://adventjs.dev",
+    link: "https://elearn50.com/moddle/?redirect=0",
     image: "/projects/Cormagdalena.webp",
     tags: [TAGS.PHP,TAGS.JAVASCRIPT,TAGS.TAILWIND],
   },
