--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,8 @@ import TitleSection from "@/components/TitleSection.astro"
 ---
 
 <Layout
-  title="Porfolio de midudev - Desarrollador y Programador Web con 15 años de experiencia"
-  description="Contrata a midudev para crear tu aplicación web o móvil. Desarrollador Web y Creador de Contenido. Especializado en crear aplicaciones únicas."
+  title="Porfolio de Joseph Avila - Desarrollador de Software con mas de 3 años de experiencia"
+  description="Contrata a Joseph Avila para crear tu aplicación web o móvil. Desarrollador Web Especializado en crear aplicaciones únicas."
 >
   <main class="px-4">
     <SectionContainer class="py-16 md:py-36">
